--- a/css/main.css
+++ b/css/main.css
@@ -743,7 +743,8 @@ a:hover {
 }
 @media (max-width: 575px) {
   .btn-outline, .btn-solid {
-    padding: 0.5rem 1.25rem;
+    padding: 0.5rem 1.75rem;
+    white-space: nowrap;
   }
 }
 
